<resources>
    <string name="app_name" translatable="false">Reminder</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="add_timer">Add timer</string>
    <string name="go">go</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="choose_color">Choose color</string>
    <string name="duration">Duration</string>
    <string name="repetitions">Repetitions</string>
    <string name="pause">Pause</string>
    <string name="settings">Settings</string>
    <string name="add_pause">Add pause</string>
    <string name="clear_data">Clear all data</string>

    <string name="ru">Russian</string>
    <string name="en">English</string>
    <string name="language">Language</string>
    <string name="font_size">Font size</string>
    <string name="use_dark">Use dark theme</string>
    <string name="timer_is_working">Timer is working</string>
</resources>
